fix: corrects spacing in top capabilities section on home page

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -94,6 +94,10 @@
     padding-top: 130px;
     padding-bottom: 130px;
 
+    .capabilities-header {
+      padding-bottom: 70px;
+    }
+
     .capabilities-button {
       text-align: center;
       padding-top: 72px;
